<resources>
    <string name="app_name" translatable="false">Shelter</string>
    <string name="first_run_alert_cancel">Cancel</string>
    <string name="first_run_alert_continue">Okay</string>
    <string name="device_admin_label" translatable="false">Shelter</string>
    <string name="device_admin_desc">App Isolation Service</string>
    <string name="device_admin_explanation">Shelter needs to become Device Admin in order to perform its isolation tasks.</string>
    <string name="payment_stub_description">Payment Service Stub (DO NOT USE)</string>
    <string name="setup_wizard_welcome">Welcome to Shelter</string>
    <string name="setup_wizard_welcome_text">Shelter is an application to help you run other applications in an isolated profile. It does so by making use of the <b>Work Profile</b> feature of Android.\n\nClick \"Next\", and we will provide you with more information about Shelter, and guide you through the setup process.\n\nWe suggest that you read through all of the following pages carefully.</string>
    <string name="setup_wizard_permissions">A word on permissions</string>
    <string name="setup_wizard_permissions_text">By default, Shelter will not ask for any individual permissions. However, once you proceed with the setup process, Shelter will try to set up a Work Profile and hence become the <b>profile manager</b> of said profile.\n\nThis will grant Shelter an extensive list of permissions inside the profile, comparable to that of a Device Admin, albeit confined to the profile. Being the profile manager is necessary for most of Shelter\'s functionality.\n\nSome advanced features of Shelter may require more permissions <b>outside</b> the Work Profile. When needed, Shelter will ask for those permissions separately when you enable the corresponding features.</string>
    <string name="setup_wizard_compatibility">Compatibility</string>
    <string name="setup_wizard_compatibility_text">Shelter is developed and tested on AOSP-like Android derivatives. This includes AOSP (Android Open Source Project), Google Android (on Pixels), and <b>most AOSP-based open-source custom ROMs</b> such as LineageOS. If your phone is running one of the Android derivatives listed above, then congratulations! Shelter is probably going to work correctly on your device.\n\nSome device vendors introduce very invasive customizations into the Android code base, resulting in conflicts, incompatibility and unexpected behavior. Some custom ROMs can also introduce compatibility-breaking changes, but generally these are rarer occurrences compared to phone vendor-introduced incompatibilities.\n\nShelter is merely an interface into the Work Profile feature provided by the system. If the feature provided by the system is broken or non-standard, <b>Shelter could not magically resolve the issue on its own</b>. If you are currently using a vendor-modified Android version that is known to break Work Profiles, <b>you have been warned</b>. You may proceed anyway, but there is no guarantee that Shelter would behave correctly under these circumstances.</string>
    <string name="setup_wizard_ready">Ready?</string>
    <string name="setup_wizard_ready_text">We are now ready to set up Shelter for you. If your device is running Android 7 or lower, please first ensure that your device is <b>not</b> in Do Not Disturb mode, because you will need to <b>click on a notification</b> later to finalize the setup process.\n\nWhen you are ready, click on \"Next\" to begin the setup process.</string>
    <string name="setup_wizard_please_wait">Please wait…</string>
    <string name="setup_wizard_please_wait_text">We are trying to initialize Work Profile and set up Shelter on your device.</string>
    <string name="setup_wizard_failed">Setup failed</string>
    <string name="setup_wizard_failed_text">We regret to inform you that we were not able to set up Shelter for you.\n\nIf your device already had a Work Profile, either from a previous installation of Shelter or from another application, you will have to remove that profile in Settings -> Account before Shelter can proceed.\n\nOtherwise, if you did not cancel the setup manually, then the reason for the failure is most commonly due to a heavily modified system, or a conflict between Shelter and other Work Profile managers. Unfortunately, there is not much that we could do about this.\n\nClick \"Next\" to exit.</string>
    <string name="setup_wizard_action_required">Action required</string>
    <string name="setup_wizard_action_required_text">You should now be seeing a notification from Shelter. <b>Please click on that notification</b> to finish the setup process.\n\nIf you do not see the notification, make sure your device is not in Do Not Disturb mode and try pulling down the notification center.\n\nTo reset Shelter and start over, you can clear the data of Shelter in Settings.</string>
    <string name="notifications_important">Shelter Important</string>
    <string name="finish_provision_title">Click here to finish setting up Shelter</string>
    <string name="finish_provision_desc">Congratulations! You are one click away from finishing setting up Shelter.</string>
    <string name="service_title">Shelter Service</string>
    <string name="service_desc">Shelter is now running &#8230;</string>
    <string name="service_auto_freeze_title">Auto-freeze pending</string>
    <string name="service_auto_freeze_desc">Shelter will auto-freeze apps launched from \"Unfreeze &amp; Launch\" on the next screen lock event.</string>
    <string name="service_auto_freeze_now">Freeze Now</string>
    <string name="app_installing">Installing...</string>
    <string name="fragment_profile_main">Main</string>
    <string name="fragment_profile_work">Shelter</string>
    <string name="list_item_disabled">[Frozen] %s</string>
    <string name="batch_operation">Batch operation</string>
    <string name="clone_to_work_profile">Clone to Shelter (Work Profile)</string>
    <string name="clone_to_main_profile">Clone to Main Profile</string>
    <string name="uninstall_app">Uninstall</string>
    <string name="freeze_app">Freeze</string>
    <string name="unfreeze_app">Unfreeze</string>
    <string name="launch">Launch</string>
    <string name="create_unfreeze_shortcut">Create Unfreeze and/or Launch Shortcut</string>
    <string name="unfreeze_and_launch">Unfreeze and Launch</string>
    <string name="auto_freeze">Auto Freeze</string>
    <string name="allow_cross_profile_widgets">Allow Widgets in Main Profile</string>
    <string name="allow_cross_profile_interaction">Allow Cross-Profile Interaction</string>
    <string name="search">Search</string>
    <string name="freeze_all">Batch Freeze</string>
    <string name="create_freeze_all_shortcut">Create Batch Freeze Shortcut</string>
    <string name="freeze_all_shortcut">Freeze</string>
    <string name="install_app_to_profile">Install APK into Shelter</string>
    <string name="install_app_to_profile_success">Application installation finished in work profile.</string>
    <string name="show_all">Show All Apps</string>
    <string name="show_all_warning">Manipulating apps that are hidden from the list could cause crashes and all sorts of unexpected behavior. However, this feature can be useful when faulty vendor-customized ROMs does not enable all necessary system apps in work profile by default. If you continue, you are on your own.</string>
    <string name="documents_ui">Open Documents UI</string>
    <string name="settings">Settings</string>
    <string name="settings_interaction">Interaction</string>
    <string name="settings_cross_profile_file_chooser">File Shuttle</string>
    <string name="settings_cross_profile_file_chooser_desc">When enabled, you\'ll be able to browse / view / pick / copy files in Shelter from main profile and vice-versa, ONLY through Documents UI (named Files or Documents on your launcher) or apps with Documents UI support (they only gain temporary access to files you choose in Documents UI), while still pertaining the filesystem isolation.</string>
    <string name="settings_block_contacts_searching">Block Contacts Searching</string>
    <string name="settings_block_contacts_searching_desc">Deny access from main profile to contacts inside work profile.</string>
    <string name="settings_payment_stub">Payment Service Stub</string>
    <string name="settings_payment_stub_desc">Enable a fake NFC payment service in the main profile, so that the "contactless payments" option under Settings - NFC becomes enabled to allow you to choose a payment app inside the work profile. This works around an Android bug that makes it impossible to select a payment app inside the work profile if none is available in the main profile.</string>
    <string name="settings_services">Services</string>
    <string name="settings_auto_freeze_service">Auto Freeze Service</string>
    <string name="settings_auto_freeze_service_desc">When the screen is locked, automatically freeze apps launched from \"Unfreeze &amp; Launch Shortcut\".</string>
    <string name="settings_auto_freeze_delay">Auto Freeze Delay</string>
    <string name="settings_dont_freeze_foreground">Skip Foreground Apps</string>
    <string name="settings_dont_freeze_foreground_desc">Do NOT freeze foreground apps (with visible activity) when you lock your screen. This can be useful for apps like music players, but you\'ll need to manually freeze them through \"Batch Freeze Shortcut\" afterwards.</string>
    <string name="settings_about">About</string>
    <string name="settings_version">Version</string>
    <string name="settings_source_code">Source Code</string>
    <string name="settings_source_code_url" translatable="false">https://gitea.angry.im/PeterCxy/Shelter</string>
    <string name="settings_translate">Translate</string>
    <string name="settings_translate_url" translatable="false">https://weblate.typeblog.net/projects/shelter/shelter/</string>
    <string name="settings_bug_report">Bug Report / Issue Tracker</string>
    <string name="settings_bug_report_url" translatable="false">https://lists.sr.ht/~petercxy/shelter</string>
    <string name="settings_patreon" translatable="false">Patreon</string>
    <string name="settings_patreon_url" translatable="false">https://www.patreon.com/PeterCxy</string>
    <string name="provision_finished">Shelter setup complete. Now restarting Shelter. If Shelter didn\'t start automatically, you may launch it again from your launcher.</string>
    <string name="msg_device_unsupported">Permission is denied or Unsupported device</string>
    <string name="work_profile_not_found">Work profile not found. Please restart the app to re-provision the profile.</string>
    <string name="work_profile_provision_failed">Cannot provision work profile. You may try again by restarting Shelter.</string>
    <string name="work_mode_disabled">It looks like you have disabled Work Mode while starting Shelter. If you have enabled it now, please start Shelter again.</string>
    <string name="clone_success">Application \"%s\" cloned successfully</string>
    <string name="uninstall_success">Application \"%s\" uninstalled successfully</string>
    <string name="freeze_success">Application \"%s\" frozen successfully</string>
    <string name="unfreeze_success">Application \"%s\" unfrozen successfully</string>
    <string name="clone_fail_system_app">Cannot clone system apps to a profile that Shelter has no control of.</string>
    <string name="uninstall_fail_system_app">Cannot uninstall system apps in a profile that Shelter has no control of.</string>
    <string name="unsupported_launcher">Cannot add shortcuts to your launcher. Please contact the developer for more information.</string>
    <string name="app_context_menu_title">Operations for %s</string>
    <string name="freeze_all_success">All apps in \"Auto Freeze\" list have been frozen successfully.</string>
</resources>