<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.PreferenceCategory android:title="@string/settings_interaction">

        <androidx.preference.CheckBoxPreference
            android:key="settings_cross_profile_file_chooser"
            android:summary="@string/settings_cross_profile_file_chooser_desc"
            android:title="@string/settings_cross_profile_file_chooser" />

        <androidx.preference.CheckBoxPreference
            android:key="settings_block_contacts_searching"
            android:summary="@string/settings_block_contacts_searching_desc"
            android:title="@string/settings_block_contacts_searching" />

        <androidx.preference.CheckBoxPreference
            android:key="settings_payment_stub"
            android:summary="@string/settings_payment_stub_desc"
            android:title="@string/settings_payment_stub" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/settings_services">

        <androidx.preference.CheckBoxPreference
            android:key="settings_auto_freeze_service"
            android:summary="@string/settings_auto_freeze_service_desc"
            android:title="@string/settings_auto_freeze_service" />

        <androidx.preference.CheckBoxPreference
            android:dependency="settings_auto_freeze_service"
            android:key="settings_dont_freeze_foreground"
            android:summary="@string/settings_dont_freeze_foreground_desc"
            android:title="@string/settings_dont_freeze_foreground" />

        <androidx.preference.DropDownPreference
            android:dependency="settings_auto_freeze_service"
            android:key="settings_auto_freeze_delay"
            android:title="@string/settings_auto_freeze_delay" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/settings_about">

        <androidx.preference.Preference
            android:key="settings_version"
            android:title="@string/settings_version" />

        <androidx.preference.Preference
            android:key="settings_source_code"
            android:summary="@string/settings_source_code_url"
            android:title="@string/settings_source_code" />

        <androidx.preference.Preference
            android:key="settings_translate"
            android:summary="@string/settings_translate_url"
            android:title="@string/settings_translate" />

        <androidx.preference.Preference
            android:key="settings_bug_report"
            android:summary="@string/settings_bug_report_url"
            android:title="@string/settings_bug_report" />

        <androidx.preference.Preference
            android:key="settings_patreon"
            android:summary="@string/settings_patreon_url"
            android:title="@string/settings_patreon" />

    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>